--- a/Gateway.Api/appsettings.json
+++ b/Gateway.Api/appsettings.json
@@ -32,6 +32,15 @@
           { "PathRemovePrefix": "/api" }
         ]
       },
+      "auth-admin-route": {
+        "ClusterId": "authservice",
+        "Match": {
+          "Path": "/api/admin/{**catch-all}"
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "/api/admin" }
+        ]
+      },
       "users-route": {
         "ClusterId": "userservice",
         //"AuthorizationPolicy": "AuthenticatedUser",
