--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,2 @@
-VITE_USERSERVICE_BASE_URL=http://localhost:5000/api
-VITE_COURSESERVICE_BASE_URL=http://localhost:5001/api
-VITE_AUTHSERVICE_BASE_URL=http://localhost:5002/api
+VITE_OIDC_AUTHORITY=http://localhost:8080/realms/course-platform
+VITE_OIDC_CLIENT_ID=frontend
