--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,10 +27,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.23.26",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.562.0",
     "oidc-client-ts": "^3.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.5.0",
     "react-oidc-context": "^3.3.0",
     "react-router-dom": "^7.9.5",
     "sonner": "^2.0.7",
