--- a/src/UserService/Application/Users.Application.csproj
+++ b/src/UserService/Application/Users.Application.csproj
@@ -8,9 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+    <PackageReference Include="Scrutor" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Contracts\CoursePlatform.Contracts.csproj" />
+    <ProjectReference Include="..\..\..\CoursePlatform.ServiceDefaults\CoursePlatform.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Domain\Users.Domain.csproj" />
   </ItemGroup>
 
