--- a/CoursePlatform.ServiceDefaults/CoursePlatform.ServiceDefaults.csproj
+++ b/CoursePlatform.ServiceDefaults/CoursePlatform.ServiceDefaults.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
 
     <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.4.0" />
