--- a/src/StorageService/StorageService.csproj
+++ b/src/StorageService/StorageService.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
 	    <PackageReference Include="AWSSDK.S3" Version="4.0.16.2" />
+	    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="10.1.0" />
     </ItemGroup>
 	
   <ItemGroup>
