--- a/src/CourseService/Application/Courses.Application.csproj
+++ b/src/CourseService/Application/Courses.Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Contracts\CoursePlatform.Contracts.csproj" />
     <ProjectReference Include="..\..\..\CoursePlatform.ServiceDefaults\CoursePlatform.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Domain\Courses.Domain.csproj" />
   </ItemGroup>
