--- a/CoursePlatform.ServiceDefaults/CoursePlatform.ServiceDefaults.csproj
+++ b/CoursePlatform.ServiceDefaults/CoursePlatform.ServiceDefaults.csproj
@@ -11,6 +11,7 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
+    <PackageReference Include="AWSSDK.S3" Version="4.0.16.2" />
 
     <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.4.0" />
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.3.1" />
