--- a/.editorconfig
+++ b/.editorconfig
@@ -57,8 +57,8 @@ csharp_using_directive_placement = outside_namespace:warning
 csharp_prefer_simple_using_statement = true:warning
 csharp_prefer_braces = true:warning
 csharp_style_namespace_declarations = file_scoped:warning
-csharp_style_prefer_method_group_conversion = true:warning
-csharp_style_prefer_top_level_statements = true:warning
+csharp_style_prefer_method_group_conversion = true:silent
+csharp_style_prefer_top_level_statements = true:silent
 csharp_style_prefer_primary_constructors = true:warning
 csharp_style_expression_bodied_methods = false:silent
 csharp_style_expression_bodied_constructors = false:silent
@@ -68,6 +68,42 @@ csharp_style_expression_bodied_indexers = true:warning
 csharp_style_expression_bodied_accessors = true:warning
 csharp_style_expression_bodied_lambdas = true:warning
 csharp_style_expression_bodied_local_functions = true:warning
+csharp_prefer_system_threading_lock = true:suggestion
+csharp_style_prefer_simple_property_accessors = true:suggestion
+csharp_style_throw_expression = true:warning
+csharp_style_prefer_null_check_over_type_check = true:suggestion
+csharp_prefer_simple_default_expression = true:warning
+csharp_style_prefer_local_over_anonymous_function = true:suggestion
+csharp_style_prefer_index_operator = true:warning
+csharp_style_prefer_range_operator = true:warning
+csharp_style_implicit_object_creation_when_type_is_apparent = true:suggestion
+csharp_style_prefer_implicitly_typed_lambda_expression = true:suggestion
+csharp_style_prefer_tuple_swap = true:suggestion
+csharp_style_prefer_unbound_generic_type_in_nameof = true:suggestion
+csharp_style_prefer_utf8_string_literals = true:suggestion
+csharp_style_inlined_variable_declaration = true:warning
+csharp_style_deconstructed_variable_declaration = true:warning
+csharp_style_unused_value_assignment_preference = discard_variable:silent
+csharp_style_unused_value_expression_statement_preference = discard_variable:silent
+csharp_prefer_static_local_function = true:warning
+csharp_prefer_static_anonymous_function = true:suggestion
+csharp_style_prefer_readonly_struct = true:suggestion
+csharp_style_prefer_readonly_struct_member = true:suggestion
+csharp_style_allow_embedded_statements_on_same_line_experimental = true:silent
+csharp_style_allow_blank_lines_between_consecutive_braces_experimental = true:silent
+csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = true:silent
+csharp_style_allow_blank_line_after_token_in_conditional_expression_experimental = true:silent
+csharp_style_allow_blank_line_after_token_in_arrow_expression_clause_experimental = true:silent
+csharp_style_conditional_delegate_call = true:warning
+csharp_style_prefer_switch_expression = true:warning
+csharp_style_prefer_pattern_matching = true:silent
+csharp_style_pattern_matching_over_is_with_cast_check = true:warning
+csharp_style_pattern_matching_over_as_with_null_check = true:warning
+csharp_style_prefer_not_pattern = true:suggestion
+csharp_style_prefer_extended_property_pattern = true:suggestion
+csharp_style_var_for_built_in_types = false:warning
+csharp_style_var_when_type_is_apparent = true:warning
+csharp_style_var_elsewhere = false:warning
 
 [*.{cs,vb}]
 dotnet_style_prefer_simplified_boolean_expressions = true:warning
@@ -244,42 +280,113 @@ dotnet_naming_style.camel_case.capitalization = camel_case
 dotnet_naming_style.async_suffix.required_suffix = Async
 dotnet_naming_style.async_suffix.capitalization = pascal_case
 
-# Custom Rules - configure these as required
+# S6781: JWT secret keys should not be disclosed
+dotnet_diagnostic.S6781.severity = none
+dotnet_style_operator_placement_when_wrapping = beginning_of_line
+tab_width = 4
+indent_size = 4
+end_of_line = crlf
+dotnet_style_coalesce_expression = true:warning
+dotnet_style_null_propagation = true:warning
+dotnet_style_prefer_is_null_check_over_reference_equality_method = true:warning
+dotnet_style_prefer_auto_properties = true:warning
+dotnet_style_collection_initializer = true:warning
+dotnet_style_object_initializer = true:warning
+dotnet_style_prefer_conditional_expression_over_assignment = true:warning
+dotnet_style_prefer_conditional_expression_over_return = true:warning
+dotnet_style_explicit_tuple_names = true:warning
+dotnet_style_prefer_inferred_tuple_names = true:warning
+dotnet_style_prefer_inferred_anonymous_type_member_names = true:warning
+dotnet_style_prefer_compound_assignment = true:warning
+dotnet_style_prefer_collection_expression = when_types_loosely_match:suggestion
+dotnet_style_predefined_type_for_locals_parameters_members = true:warning
+dotnet_style_predefined_type_for_member_access = true:warning
+dotnet_style_require_accessibility_modifiers = for_non_interface_members:warning
+dotnet_style_allow_multiple_blank_lines_experimental = true:silent
+dotnet_style_allow_statement_immediately_after_block_experimental = true:silent
+dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary:warning
+dotnet_style_parentheses_in_other_binary_operators = never_if_unnecessary:warning
+dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary:warning
+dotnet_style_parentheses_in_other_operators = never_if_unnecessary:warning
+dotnet_style_qualification_for_field = false:warning
+dotnet_style_qualification_for_property = false:warning
+dotnet_style_qualification_for_method = false:warning
+dotnet_style_qualification_for_event = false:warning
 
-# .NET Code Analyzers rules
+#### Suppressions (Safe to Silence) ####
 
-# CA1000: Do not declare static members on generic types
-dotnet_diagnostic.CA1000.severity = none
+# CA1707: Identifiers should not contain underscores
+# Reason: Commonly used in Unit Tests (e.g., Should_DoSomething_When_Context)
+dotnet_diagnostic.CA1707.severity = none
+
+# CA1308: Normalize strings to uppercase
+# Reason: Lowercase normalization is perfectly fine for most applications.
+dotnet_diagnostic.CA1308.severity = none
+
+# CA2007: Consider calling ConfigureAwait on the awaited task
+# Reason: ASP.NET Core does not have a SynchronizationContext; this is redundant noise.
+dotnet_diagnostic.CA2007.severity = none
 
 # CA1002: Do not expose generic lists
+# Reason: In internal backend services, exposing List<T> is often simpler and acceptable.
 dotnet_diagnostic.CA1002.severity = none
 
-# CA1008: Enums should have zero value
-dotnet_diagnostic.CA1008.severity = none
+# CA1062: Validate arguments of public methods
+# Reason: Modern C# with Nullable Reference Types (NRT) makes manual null checks less necessary.
+dotnet_diagnostic.CA1062.severity = none
 
-# CA1019: Define accessors for attribute arguments
-dotnet_diagnostic.CA1019.severity = none
+# CA1304/CA1305/CA1311: Specify CultureInfo/IFormatProvider
+# Reason: Only needed if your app is multi-lingual and needs specific date/number formatting.
+dotnet_diagnostic.CA1304.severity = none
+dotnet_diagnostic.CA1305.severity = none
+dotnet_diagnostic.CA1311.severity = none
 
-# CA1024: Use properties where appropriate
-dotnet_diagnostic.CA1024.severity = none
+# CA1848: Use the LoggerMessage delegates
+# Reason: High-performance logging is only critical for extremely high-throughput systems.
+dotnet_diagnostic.CA1848.severity = none
+
+# IDE0005: Remove unnecessary using directives
+# Reason: Set to 'suggestion' so it doesn't fail builds but still allows for auto-cleanup.
+dotnet_diagnostic.IDE0005.severity = suggestion
+
+# IDE0008: Use explicit type instead of 'var'
+# Reason: Using 'var' is the industry standard for readability when the type is apparent.
+dotnet_diagnostic.IDE0008.severity = none
 
 # CA1030: Use events where appropriate
+# Reason: This rule incorrectly flags the DDD 'Raise Domain Event' pattern. 
+# We prefer collecting event objects over using C# event handlers for better decoupling.
 dotnet_diagnostic.CA1030.severity = none
-
-# CA1031: Do not catch general exception types
-dotnet_diagnostic.CA1031.severity = none
-
-# CA1032: Implement standard exception constructors
-dotnet_diagnostic.CA1032.severity = none
-
-# CA1034: Nested types should not be visible
-dotnet_diagnostic.CA1034.severity = none
 
 # CA1040: Avoid empty interfaces
 dotnet_diagnostic.CA1040.severity = none
 
-# CA1051: Do not declare visible instance fields
-dotnet_diagnostic.CA1051.severity = none
+# CA1711: Identifiers should not have incorrect suffix
+dotnet_diagnostic.CA1711.severity = none
+
+# S2326: Unused type parameters should be removed
+dotnet_diagnostic.S2326.severity = none
+
+# IDE0290: Use primary constructor
+dotnet_diagnostic.IDE0290.severity = none
+
+# IDE0058: Expression value is never used
+dotnet_diagnostic.IDE0058.severity = none
+
+# IDE0053: Use expression body for lambda expression
+dotnet_diagnostic.IDE0053.severity = none
+
+# S125: Sections of code should not be commented out
+dotnet_diagnostic.S125.severity = none
+
+# 1812: Sections of code should not be commented out
+dotnet_diagnostic.CA1812.severity = none
+
+# IDE0046: Convert to conditional expression
+dotnet_diagnostic.IDE0046.severity = none
+
+# S2094: Classes should not be empty
+dotnet_diagnostic.S2094.severity = none
 
 # CA1054: URI-like parameters should not be strings
 dotnet_diagnostic.CA1054.severity = none
@@ -287,180 +394,29 @@ dotnet_diagnostic.CA1054.severity = none
 # CA1056: URI-like properties should not be strings
 dotnet_diagnostic.CA1056.severity = none
 
-# CA1062: Validate arguments of public methods
-dotnet_diagnostic.CA1062.severity = none
-
-# CA1063: Implement IDisposable Correctly
-dotnet_diagnostic.CA1063.severity = none
-
-# CA1304: Specify CultureInfo
-dotnet_diagnostic.CA1304.severity = none
-
-# CA1307: Specify StringComparison for clarity
-dotnet_diagnostic.CA1307.severity = none
-
-# CA1308: Normalize strings to uppercase
-dotnet_diagnostic.CA1308.severity = none
-
-# CA1309: Use ordinal string comparison
-dotnet_diagnostic.CA1309.severity = none
-
-# CA1311: Specify a culture or use an invariant version
-dotnet_diagnostic.CA1311.severity = none
-
-# CA1515: Consider making public types internal
-dotnet_diagnostic.CA1515.severity = none
-
-# CA1700: Do not name enum values 'Reserved'
-dotnet_diagnostic.CA1700.severity = none
-
-# CA1707: Identifiers should not contain underscores
-dotnet_diagnostic.CA1707.severity = none
-
-# CA1711: Identifiers should not have incorrect suffix
-dotnet_diagnostic.CA1711.severity = none
+# S2139: Exceptions should be either logged or rethrown but not both
+dotnet_diagnostic.S2139.severity = none
 
 # CA1716: Identifiers should not match keywords
 dotnet_diagnostic.CA1716.severity = none
 
-# CA1724: Type names should not match namespaces
-dotnet_diagnostic.CA1724.severity = none
+# CA1000: Do not declare static members on generic types
+dotnet_diagnostic.CA1000.severity = none
 
-# CA1812: Avoid uninstantiated internal classes
-dotnet_diagnostic.CA1812.severity = none
+# CA1063: Implement IDisposable Correctly
+dotnet_diagnostic.CA1063.severity = none
 
 # CA1816: Dispose methods should call SuppressFinalize
 dotnet_diagnostic.CA1816.severity = none
 
-# CA1819: Properties should not return arrays
-dotnet_diagnostic.CA1819.severity = none
-
-# CA1822: Mark members as static
-dotnet_diagnostic.CA1822.severity = none
-
-# CA1848: Use the LoggerMessage delegates
-dotnet_diagnostic.CA1848.severity = none
-
-# CA1849: Call async methods when in an async method
-dotnet_diagnostic.CA1849.severity = none
-
-# CA1860: Avoid using 'Enumerable.Any()' extension method
-dotnet_diagnostic.CA1860.severity = none
-
-# CA1862: Use the 'StringComparison' method overloads to perform case-insensitive string comparisons
-dotnet_diagnostic.CA1862.severity = none
-
-# CA2007: Consider calling ConfigureAwait on the awaited task
-dotnet_diagnostic.CA2007.severity = none
-
-# CA2201: Do not raise reserved exception types
-dotnet_diagnostic.CA2201.severity = none
-
-# CA2211: Non-constant fields should not be visible
-dotnet_diagnostic.CA2211.severity = none
-
-# CA2213: Disposable fields should be disposed
-dotnet_diagnostic.CA2213.severity = none
-
-# CA2225: Operator overloads have named alternates
-dotnet_diagnostic.CA2225.severity = none
-
-# CA2227: Collection properties should be read only
-dotnet_diagnostic.CA2227.severity = none
-
-# CA2234: Pass system uri objects instead of strings
-dotnet_diagnostic.CA2234.severity = none
-
-# CA2326: Do not use TypeNameHandling values other than None
-dotnet_diagnostic.CA2326.severity = none
-
-# CA2327: Do not use insecure JsonSerializerSettings
-dotnet_diagnostic.CA2327.severity = none
-
-# CA5394: Do not use insecure randomness
-dotnet_diagnostic.CA5394.severity = none
-
-# CA5401: Do not use CreateEncryptor with non-default IV
-dotnet_diagnostic.CA5401.severity = none
-
-# CS8600: Converting null literal or possible null value to non-nullable type.
-dotnet_diagnostic.CS8600.severity = none
-
-# CS8603: Possible null reference return.
-dotnet_diagnostic.CS8603.severity = none
-
-# CS8618: Non-nullable field must contain a non-null value when exiting constructor. Consider declaring as nullable.
-dotnet_diagnostic.CS8618.severity = none
-
-# CS9107: Parameter is captured into the state of the enclosing type and its value is also passed to the base constructor.
-dotnet_diagnostic.CS9107.severity = none
-
-# IDE Code Analyzers rules
-
-# IDE0005: Remove unnecessary using directives
-dotnet_diagnostic.IDE0005.severity = none
-
-# IDE0008: Use explicit type
-# Disabled dotnet_diagnostic.IDE0008.severity = none
-
-# IDE0046: Convert to conditional expression
-dotnet_diagnostic.IDE0046.severity = none
-
-# IDE0053: Use expression body for lambda expression
-dotnet_diagnostic.IDE0053.severity = none
-
-# IDE0270: Use coalesce expression
-dotnet_diagnostic.IDE0270.severity = none
-
-# IDE0290: Use primary constructor
-dotnet_diagnostic.IDE0290.severity = none
-
-# SonarAnalyzer.CSharp rules
-
-# S112: General or reserved exceptions should never be thrown
-dotnet_diagnostic.S112.severity = none
-
-# S125: Remove this commented out code
-dotnet_diagnostic.S125.severity = none
-
-# S1075: URIs should not be hardcoded
-dotnet_diagnostic.S1075.severity = none
-
-# S2094: Utility classes should not have public constructors
-dotnet_diagnostic.S1118.severity = none
+# S3881: "IDisposable" should be implemented correctly
+dotnet_diagnostic.S3881.severity = none
 
 # S1144: Unused private types or members should be removed
 dotnet_diagnostic.S1144.severity = none
 
-# S2094: Classes should not be empty
-dotnet_diagnostic.S2094.severity = none
-
-# S2139: Exceptions should be either logged or rethrown but not both
-dotnet_diagnostic.S2139.severity = none
-
-# S2325: Methods and properties that don't access instance data should be static
-dotnet_diagnostic.S2325.severity = none
-
-# S2326: Unused type parameters should be removed
-dotnet_diagnostic.S2326.severity = none
-
-# S2365: Properties should not make collection or array copies
-dotnet_diagnostic.S2365.severity = none
-
-# S3267: Loops should be simplified with "LINQ" expressions
-dotnet_diagnostic.S3267.severity = none
-
-# S3881: "IDisposable" should be implemented correctly
-dotnet_diagnostic.S3881.severity = none
-
-# S4136: Method overloads should be grouped together
-dotnet_diagnostic.S4136.severity = none
-
-# S6605: Collection-specific "Exists" method should be used instead of the "Any" extension
-dotnet_diagnostic.S6605.severity = none
-
-# S6781: JWT secret keys should not be disclosed
-dotnet_diagnostic.S6781.severity = none
+# CA1724: Type names should not match namespaces
+dotnet_diagnostic.CA1724.severity = none
 
 [**/Migrations/*.cs]
 generated_code = true
