--- a/src/StorageService/StorageService.csproj
+++ b/src/StorageService/StorageService.csproj
@@ -1,8 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
+    <PropertyGroup>
+      <UserSecretsId>2e2182f5-85a6-40ea-8a7b-3aa0aa465a62</UserSecretsId>
+    </PropertyGroup>
+
     <ItemGroup>
 	    <PackageReference Include="MassTransit.RabbitMQ" />
 		<PackageReference Include="AWSSDK.S3" />
+		<PackageReference Include="OpenAI" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
     </ItemGroup>
 	
