--- a/.editorconfig
+++ b/.editorconfig
@@ -422,6 +422,13 @@ dotnet_diagnostic.CA1724.severity = none
 
 [**/Migrations/*.cs]
 generated_code = true
+[**/Migrations/Read/*.cs]
+generated_code = true
+[**/Migrations/**/*.cs]
+generated_code = true
+
+[**/Migrations/**/*.*]
+generated_code = true
 
 dotnet_diagnostic.S1186.severity = none
 
