--- a/src/CourseService/Application/Courses.Application.csproj
+++ b/src/CourseService/Application/Courses.Application.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Domain\Courses.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Shared\Extensions\" />
+  </ItemGroup>
+
 </Project>
