--- a/src/CourseService/Domain/Courses.Domain.csproj
+++ b/src/CourseService/Domain/Courses.Domain.csproj
@@ -1,4 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="Application.UnitTests" />
+  </ItemGroup>
 
   <ItemGroup>
     <Compile Remove="Lessons\Events\**" />
