--- a/.editorconfig
+++ b/.editorconfig
@@ -425,6 +425,9 @@ dotnet_diagnostic.S1144.severity = none
 # CA1724: Type names should not match namespaces
 dotnet_diagnostic.CA1724.severity = none
 
+
+dotnet_diagnostic.CA1055.severity = none
+
 [**/Migrations/**/*.cs]
 generated_code = true
 
